Wed Jan 17 14:25:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: more stuff
	* libxslt/transform.c: context position and size in for-each
	* libxslt/xsltutils[ch] libxslt/makefile.am: added the util module
	  and put Error and Debug routines
	* libxslt/xslt.c libxslt/transform.c libxslt/pattern.c: switched
	  to use the Debug calls, cleanup
	* libxslt/xsltproc.c: added -v to enable debug printing

Tue Jan 16 17:17:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: started filling it :-(
	* libxslt/pattern.c: should now at least compile the full
	  set of patterns authorized. Default priorities added.
	* libxslt/transform.c: a bit more work and cleanup.

Mon Jan 15 15:34:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: started adding in there :-(

Mon Jan 15 15:31:41 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c, xslt.c, xsltproc.c: lots of fixes, added
	  support of xslt:if and xslt:attribute, need libxml2 interfaces
	  present only in CVS.

Sat Jan 13 23:26:21 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* test/Makefile.am test/REC*/Makefile.am: added first test
	* libxslt/pattern.c libxslt/transform.c libxslt/xslt.c:
	  cleanup of nodes at reading of stylesheet, added support
	  for xsl:for-each and fixed a few recursion bugs

Fri Jan 12 22:33:07 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* pattern.c, xslt.c: removed debug
	* transform.c: added value-of, seems to handle the first
	  REC example correctly

Fri Jan 12 18:34:01 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c, xsltproc.c: small fight with spaces and formatting
	  may need a revisit later but looks pretty good right now.

Fri Jan 12 13:43:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c: basic processing in place
	* xsltInternals.h: exported one xslt.c function

Thu Jan 11 21:10:59 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
